--- a/src/app/Dashbord_admin/header-dasboard/header-dasboard.component.html
+++ b/src/app/Dashbord_admin/header-dasboard/header-dasboard.component.html
@@ -10,6 +10,7 @@
       <li id="Statistique"><i class="fa-solid fa-graduation-cap"></i>&nbsp;&nbsp;Gestion Apprenant</li>
       <li id="Statistique"><i class="fa-solid fa-book"></i>&nbsp;&nbsp;Gestion Matière</li>
       <li id="Statistique"><i class="fa-solid fa-school"></i>&nbsp;&nbsp;Gestion Classe</li>
+      <li id="Statistique"><i class="fa-solid fa-arrow-right-from-bracket"></i>&nbsp;&nbsp;Se Deconnecter</li>
     </ul>
   </div>
 </div>
