--- a/src/app/Dashbord_admin/dashbord-statistique/dashbord-statistique.component.css
+++ b/src/app/Dashbord_admin/dashbord-statistique/dashbord-statistique.component.css
@@ -7,6 +7,7 @@
   justify-content: center;
   align-items: center;
   gap: 40px;
+  flex-wrap: wrap;
 }
 
 .Card1 {
@@ -32,7 +33,7 @@
 
 .cardbx i {
   font-size: 55px;
-  color: #BDA1F5;
+  color: #457A74;
   background-color: aliceblue;
   padding: 0.3em;
   margin-right: 0.5em;
@@ -49,7 +50,7 @@
 
 .cardbx1 i {
   font-size: 55px;
-  color: #BDA1F5;
+  color: #457A74;
   background-color: #FFE0D3;
   padding: 0.3em;
   margin-right: 0.5em;
@@ -65,7 +66,7 @@
 
 .cardbx2 i {
   font-size: 55px;
-  color: #BDA1F5;
+  color: #457A74;
   background-color: #d7d7d7;
   padding: 0.3em;
   margin-right: 0.5em;
