--- a/src/app/Dashbord_admin/dashbord-statistique/dashbord-statistique.component.html
+++ b/src/app/Dashbord_admin/dashbord-statistique/dashbord-statistique.component.html
@@ -1,4 +1,4 @@
-<app-header-dasboard></app-header-dasboard>
+<app-header-dasboard userid = "1"></app-header-dasboard>
 <div class="Container">
   <div class="Container_Card">
     <div class="Container_Card mt-5">
