--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
+<app-menu-eleve></app-menu-eleve>
+<!-- <app-apprenant></app-apprenant> -->
+
