--- a/src/app/Dashbord_admin/header-dasboard/header-dasboard.component.html
+++ b/src/app/Dashbord_admin/header-dasboard/header-dasboard.component.html
@@ -3,14 +3,14 @@
     <ul>
       <li>
         <img src="https://img.freepik.com/free-vector/international-student-day-banner-design_1308-122226.jpg?size=626&ext=jpg&uid=R119572586&ga=GA1.1.662083046.1696519376&semt=ais" alt="" srcset="" alt="">
-        <p class="" id="Dashboard">Dashboard</p>
+        <p class="" id="Dashboard">Dashboard {{UserId}} </p>
       </li>
       <li id="Statistique"><i class="fa-solid fa-chart-simple"></i>&nbsp;&nbsp;Statistique</li>
-      <li id="Statistique"><i class="fa-solid fa-chalkboard-user"></i>&nbsp;&nbsp;Gestion Enseignant</li>
-      <li id="Statistique"><i class="fa-solid fa-graduation-cap"></i>&nbsp;&nbsp;Gestion Apprenant</li>
-      <li id="Statistique"><i class="fa-solid fa-book"></i>&nbsp;&nbsp;Gestion Matière</li>
-      <li id="Statistique"><i class="fa-solid fa-school"></i>&nbsp;&nbsp;Gestion Classe</li>
-      <li id="Statistique"><i class="fa-solid fa-arrow-right-from-bracket"></i>&nbsp;&nbsp;Se Deconnecter</li>
+      <li id="Statistique"><i class="fa-solid fa-chalkboard-user"></i>&nbsp;&nbsp;<a [routerLink]="['/administration/Gestion-enseignant', UserId]">Gestion Enseignant</a></li>
+      <li id="Statistique"><i class="fa-solid fa-graduation-cap"></i>&nbsp;&nbsp;<a [routerLink]="['/administration/Gestion-apprenant', UserId]">Gestion Apprenant</a></li>
+      <li id="Statistique"><i class="fa-solid fa-book"></i>&nbsp;&nbsp;<a [routerLink]="['/administration/Gestion-matiere', UserId]">Gestion Matière</a></li>
+      <li id="Statistique"><i class="fa-solid fa-school"></i>&nbsp;&nbsp;<a [routerLink]="['/administration/Gestion-classe', UserId]">Gestion Classe</a></li>
+      <li id="Statistique"><i class="fa-solid fa-arrow-right-from-bracket"></i>&nbsp;&nbsp;<a routerLink="/">Se Deconnecter</a></li>
     </ul>
   </div>
 </div>
