--- a/src/app/Dashbord_admin/dashbord-matiere/dashbord-matiere.component.html
+++ b/src/app/Dashbord_admin/dashbord-matiere/dashbord-matiere.component.html
@@ -1,1 +1,174 @@
-<p>dashbord-matiere works!</p>
+<app-header-dasboard></app-header-dasboard>
+<p>dashbord-classe works!</p>
+<div class= " container card-body shadow-lg mt-5 ">
+      
+<div class="listeapprenent mt-5 mb-5">
+
+
+  <div class="container">
+  <div class="title text-center">
+    <h3 class="text-center fw-bold">Liste des Classes </h3>
+  </div>
+
+  <div class="listecontainer" id="liste">
+    <div >
+      <button class="btn btn-outline-warning mb-2" data-bs-toggle="modal" data-bs-target="#exampleModal" id="user"> Ajouter apprenant</button>
+    </div>
+
+    <div class="card-body shadow-lg">
+      <div class="table-responsive">
+          <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+              <thead>
+                  <tr>
+                      <th appCouleurfond class="text-white fw-bold">ID</th>
+                      <th appCouleurfond class="text-white fw-bold">Niveau</th>
+                      <th appCouleurfond class="text-white fw-bold">Effectifs </th>
+                      <th appCouleurfond class="text-white fw-bold">Semestre </th>
+                      
+                  </tr>
+              </thead>
+              <tfoot>
+              </tfoot>
+              <tbody>
+                  <tr>
+                      <td>1</td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                  </tr>
+
+              </tbody>
+          </table>
+      </div>
+  </div>
+</div>
+  </div>
+</div>
+
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5 " id="staticBackdropLabel">  
+          <span class="material-symbols-outlined">
+            list_alt_add
+            </span>
+            Ajouter une classe </h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <div class="mb-3">
+            <label for="idEvaluation" class="form-label">ID</label>
+            <input type="number" class="form-control" id="idEvaluation" >
+          </div>
+        <div class="mb-3">
+            <label for="semestre" class="form-label">Semestre</label>
+            <select class="form-select" id="validationDefault04" required>
+              <option selected disabled value="">Choisissez le niveau </option>
+              <option>Semestre 1</option>
+              <option>Semestre 2</option>
+              <option>Semestre 3</option>
+              <option>Semestre 4</option>
+              <option>Semestre </option>
+            </select>
+            <input type="text" class="form-control" id="semestre" name="semestre" >
+         </div>
+         <div class="mb-3">
+            <label for="validationDefault04" class="form-label">Niveau</label>
+            <select class="form-select" id="validationDefault04" required>
+              <option selected disabled value="">Choisissez le niveau </option>
+              <option>Licence 1</option>
+              <option>Licence 2</option>
+              <option>Licence 3</option>
+              <option>Master 1</option>
+              <option>Master 2</option>
+            </select>
+          </div>
+        
+        
+       
+        
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
+        <button type="button" class="btn btn-primary" id="btn1">Enregistrer</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Ajout classe  -->
+
+<!-- Button trigger modal -->
+<div class="text-center">
+<button type="button" class="btn titre text-center" data-bs-toggle="modal" data-bs-target="#staticBackdrop" >
+   Ajouter une classe
+</button>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5 " id="staticBackdropLabel">  
+          <span class="material-symbols-outlined">
+            list_alt_add
+            </span>
+            Ajouter une classe </h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <div class="mb-3">
+            <label for="idEvaluation" class="form-label">ID</label>
+            <input type="number" class="form-control" id="idEvaluation" >
+          </div>
+        <div class="mb-3">
+            <label for="semestre" class="form-label">Semestre</label>
+            <select class="form-select" id="validationDefault04" required>
+              <option selected disabled value="">Choisissez le niveau </option>
+              <option>Semestre 1</option>
+              <option>Semestre 2</option>
+              <option>Semestre 3</option>
+              <option>Semestre 4</option>
+              <option>Semestre 5 </option>
+              <option>Semestre 6 </option>
+
+            </select>
+           
+         </div>
+         <div class="mb-3">
+            <label for="validationDefault04" class="form-label">Niveau</label>
+            <select class="form-select" id="validationDefault04" required>
+              <option selected disabled value="">Choisissez le niveau </option>
+              <option>Licence 1</option>
+              <option>Licence 2</option>
+              <option>Licence 3</option>
+              <option>Master 1</option>
+              <option>Master 2</option>
+            </select>
+          </div>
+        <div class="mb-3">
+            <label for="typEvaluation" class="form-label">Type de l'évaluation</label>
+            <select class="form-select" id="typEvaluation" name="typEvaluation" required>
+                <option selected disabled value="">Choisis le type  d'évaluation</option>
+                <option>Devoir</option>
+                <option>Examen</option>
+                <option>Autres</option>
+              </select>
+        </div>
+        <div class="mb-3">
+            <label for="dateEvaluation" class="form-label">Mettez la date de l'évaluation</label>
+            <input type="date" class="form-control" id="dateEvaluation" name="dateEvaluation" >
+         </div>
+       
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
+        <button type="button" class="btn btn-primary" id="btn1">Enregistrer</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<!-- tableau -->
