--- a/src/styles.css
+++ b/src/styles.css
@@ -4,4 +4,5 @@
 @import '~sweetalert2/dist/sweetalert2.min.css';
 @import '~font-awesome/css/font-awesome.min.css';
 @import '~font-awesome/css/font-awesome.css';
+@import '~boxicons/css/boxicons.min.css';
 /* @import '~font-awesome/css/font-awesome.min.map'; */
