--- a/src/app/Dashbord_admin/apprenant/apprenant.component.html
+++ b/src/app/Dashbord_admin/apprenant/apprenant.component.html
@@ -52,7 +52,7 @@
                        </td>
                       <td>
                         <div class="d-flex justify-content-center">
-                          <button class="btn btn-primary"><i class="bi bi-person-vcard"style="font-size: 20px;"></i></button>
+                          <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal-detail"><i class="bi bi-person-vcard"style="font-size: 20px;"></i></button>
                         </div>
 
                       </td>
@@ -66,7 +66,7 @@
   </div>
 </div>
 
-<!-- modall -->
+<!-- modall ajout-->
 
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
@@ -108,6 +108,47 @@
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
         <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- fin modal ajout -->
+<!-- modal detaiil -->
+<div class="modal fade" id="exampleModal-detail" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" >
+    <div class="modal-content" >
+
+      <div class="modal-body">
+        <div class="container mt-4 mb-4 p-3 d-flex justify-content-center">
+          <div class="card p-4 shadow-md">
+           <div class=" image d-flex flex-column justify-content-center align-items-center">
+
+                <img src="https://i.imgur.com/wvxPV9S.png" height="100" width="100" />
+             <div class="nameuser  w-50 d-flex justify-content-evenly">
+               <span class="name mt-3">Eleanor</span>
+               <span class="name mt-3">Pena</span>
+             </div>
+             <div class="emaildetail">
+               <span class="name mt-3">email@gmail.com</span>
+             </div>
+             <div class="emaildetail">
+               <span class="name mt-3">Licene1</span>
+             </div>
+             <div class="emaildetail">
+               <span class="name mt-3">2023/2024</span>
+             </div>
+       <div class="gap-3 mt-3 icons d-flex flex-row justify-content-center align-items-center">
+
+                 </div>
+
+               </div>
+               </div>
+               </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+
       </div>
     </div>
   </div>
