--- a/src/app/Dashbord_admin/header-dasboard/header-dasboard.component.html
+++ b/src/app/Dashbord_admin/header-dasboard/header-dasboard.component.html
@@ -5,8 +5,8 @@
         <img src="https://img.freepik.com/free-vector/international-student-day-banner-design_1308-122226.jpg?size=626&ext=jpg&uid=R119572586&ga=GA1.1.662083046.1696519376&semt=ais" alt="" srcset="" alt="">
         <p class="" id="Dashboard">Dashboard</p>
       </li>
-      <li id="Statistique"><i class="fa-solid fa-chart-simple"></i>&nbsp;&nbsp;Statistique</li>
-      <li id="Statistique"><i class="fa-solid fa-chalkboard-user"></i>&nbsp;&nbsp;<a [routerLink]="['/administration/Gestion-enseignant', UserId]">Gestion Enseignant</a></li>
+      <li id="Statistique"><i class="fa-solid fa-chart-simple"></i>&nbsp;&nbsp;<a [routerLink]="['/administration/statistique', UserId]">Statistique</a></li>
+      <li id="Statistique"><i class="fa-solid fa-graduation-cap"></i>&nbsp;&nbsp;<a [routerLink]="['/administration/Gestion-enseignant', UserId]">Gestion enseignant</a></li>
       <li id="Statistique"><i class="fa-solid fa-graduation-cap"></i>&nbsp;&nbsp;<a [routerLink]="['/administration/Gestion-apprenant', UserId]">Gestion Apprenant</a></li>
       <li id="Statistique"><i class="fa-solid fa-book"></i>&nbsp;&nbsp;<a [routerLink]="['/administration/Gestion-matiere', UserId]">Gestion Matière</a></li>
       <li id="Statistique"><i class="fa-solid fa-school"></i>&nbsp;&nbsp;<a [routerLink]="['/administration/Gestion-classe', UserId]">Gestion Classe</a></li>
