--- a/src/app/Dashbord_admin/dashbord-professeur/dashbord-professeur.component.html
+++ b/src/app/Dashbord_admin/dashbord-professeur/dashbord-professeur.component.html
@@ -1,1 +1,35 @@
-<p>dashbord-professeur works!</p>
+<app-header-dasboard></app-header-dasboard>
+<div class="Container">
+  <div class="Container_Card">
+    <div class="Container_Card mt-5">
+      <div class="Card1">
+        <div class="cardbx1">
+          <i class='bx bxs-graduation'></i>
+          <div>
+            <p class="text-center">Enseignant</p>
+            <h3 class="text-center">5</h3>
+          </div>
+        </div>
+      </div>
+      <div class="Card1">
+        <div class="cardbx">
+          <i class='bx bx-user-pin'></i>
+          <div>
+            <p class="text-center">Enseignant Desarchivé</p>
+            <h3 class="text-center">5</h3>
+          </div>
+        </div>
+      </div>
+      <div class="Card1">
+        <div class="cardbx2">
+          <i class='bx bxs-user-circle'></i>
+          <div>
+            <p class="text-center">Enseignant/p>
+            <h3 class="text-center">2</h3>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
