--- a/src/app/Dashbord_admin/dashbord-professeur/dashbord-professeur.component.html
+++ b/src/app/Dashbord_admin/dashbord-professeur/dashbord-professeur.component.html
@@ -31,5 +31,66 @@
       </div>
     </div>
   </div>
+
+  <button type="button" id="btn1" class="btn btn" data-bs-toggle="modal" data-bs-target="#exampleModal" style="margin-top: 80px; margin-left: 90px; margin-bottom: 20px;">
+    Ajouter un formateur
+  </button>
+
+
+  <table class="table" style="width: 85%; margin: auto;">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">First</th>
+        <th scope="col">Last</th>
+        <th scope="col">Handle</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor ='let professeur of usersdata'>
+        <th scope="row">{{professeur.id}}</th>
+        <td>{{professeur.nom}}</td>
+        <td>{{professeur.prenom}}</td>
+        <td>{{professeur.email}}</td>
+      </tr>
+    </tbody>
+  </table>
+
+  <!-- Button trigger modal -->
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Ajout Formateur</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <form action="" (submit)="Registerfunction($event)">
+            <div class="mb-3">
+              <label for="nom" class="form-label">Nom</label>
+              <input type="text" name="nom" class="form-control"  placeholder="nom" [(ngModel)]="formDataregister.nom">
+            </div>
+            <div class="mb-3">
+              <label for="prenom" class="form-label">Prenom</label>
+              <input type="text" name="prenom" class="form-control"  placeholder="prenom" [(ngModel)]="formDataregister.prenom">
+            </div>
+            <div class="mb-3">
+              <label for="exampleFormControlInput1" class="form-label">Email address</label>
+              <input type="email" name="email" class="form-control"  placeholder="name@example.com" [(ngModel)]="formDataregister.email">
+            </div>
+            <div class="mb-3">
+              <label for="password" class="form-label">Password</label>
+              <input type="password" name="password" class="form-control" placeholder="Password" [(ngModel)]="formDataregister.password">
+              <button type="submit" class="btn btn-primary">Save changes</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
+
+
+
 
