--- a/src/app/Dashbord_admin/dashbord-professeur/dashbord-professeur.component.html
+++ b/src/app/Dashbord_admin/dashbord-professeur/dashbord-professeur.component.html
@@ -7,7 +7,7 @@
           <i class='bx bxs-graduation'></i>
           <div>
             <p class="text-center">Enseignant</p>
-            <h3 class="text-center">5</h3>
+            <h3 class="text-center">{{usersdata.length}}</h3>
           </div>
         </div>
       </div>
@@ -40,18 +40,22 @@
   <table class="table" style="width: 85%; margin: auto;">
     <thead>
       <tr>
-        <th scope="col">#</th>
-        <th scope="col">First</th>
-        <th scope="col">Last</th>
-        <th scope="col">Handle</th>
+        <th scope="col">id</th>
+        <th scope="col">Nom</th>
+        <th scope="col">Prenom</th>
+        <th scope="col">Email</th>
+        <th scope="col" colspan="2">Action</th>
       </tr>
     </thead>
-    <tbody>
-      <tr *ngFor ='let professeur of usersdata'>
+    <tbody *ngFor ='let professeur of usersdata'>
+      <tr *ngIf="professeur.role==2">
         <th scope="row">{{professeur.id}}</th>
         <td>{{professeur.nom}}</td>
         <td>{{professeur.prenom}}</td>
         <td>{{professeur.email}}</td>
+        <td><button class="btn btn" id="btn2" (click)="archiver(professeur.id)">Archiver</button></td>
+        <td><button class="btn btn" id="btn1">Desactivé</button></td>
+
       </tr>
     </tbody>
   </table>
