--- a/src/app/Dashbord_admin/dashbord-classe/dashbord-classe.component.html
+++ b/src/app/Dashbord_admin/dashbord-classe/dashbord-classe.component.html
@@ -15,10 +15,10 @@
 
     <div class="card-body shadow-lg">
       <div class="table-responsive">
-          <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+          <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0" >
               <thead>
                   <tr>
-                      <th appCouleurfond class="text-white fw-bold">ID</th>
+                      <th appCouleurfond class="text-white fw-bold"> ID</th>
                       <th appCouleurfond class="text-white fw-bold">Niveau</th>
                       <th appCouleurfond class="text-white fw-bold">Effectifs </th>
                       <!-- <th appCouleurfond class="text-white fw-bold">Semestre </th> -->
@@ -26,11 +26,11 @@
               </thead>
               <tfoot>
               </tfoot>
-              <tbody>
-                  <tr>
-                      <td>1</td>
-                      <td></td>
-                      <td></td>
+              <tbody >
+                  <tr *ngFor="let classe1 of userClasse" >
+                      <td> {{classe1.id}}</td>
+                      <td>{{classe1.niveau}}</td>
+                      <td>{{classe1.effectif  }}</td>
                       
                   </tr>
 
@@ -51,44 +51,49 @@
 </div>
 
 <!-- Modal -->
+
 <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
 <div class="modal-dialog">
   <div class="modal-content">
     <div class="modal-header">
-      <h1 class="modal-title fs-5 " id="staticBackdropLabel">  
+      <h1 class="modal-title fs-5 " id="staticBackdropLabel" >  
         <span class="material-symbols-outlined">
           list_alt_add
           </span>
           Ajouter une classe </h1>
       <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
     </div>
+
     <div class="modal-body">
-      <div class="mb-3">
-          <label for="idEvaluation" class="form-label">ID</label>
-          <input type="number" class="form-control" id="idEvaluation" >
+      <form action="" method ="post">
+       
+    
+        <div class="mb-3">
+            <label for="validationDefault04" class="form-label">Niveau</label>
+            <select class="form-select"  name="niveau" for ="niveau" required   [(ngModel)] ="niveauClasse">
+              <option selected disabled value="">Choisissez le niveau </option>
+              <option value="licence 1">Licence 1</option>
+              <option value="licence 2">Licence 2</option>
+              <option value="licence 3">Licence 3</option>
+              <option value="Master 1">Master 1</option>
+              <option value="Master 2">Master 2</option>
+            </select>
+          </div>
+        
+        <div class="mb-3">
+            <label for="dateEvaluation" class="form-label">Effectifs</label>
+            <input type="number" class="form-control" id="ajoutclasse" name="effectif" [(ngModel)] ="effectifClasse" >
         </div>
-   
-      <div class="mb-3">
-          <label for="validationDefault04" class="form-label">Niveau</label>
-          <select class="form-select" id="validationDefault04" required>
-            <option selected disabled value="">Choisissez le niveau </option>
-            <option>Licence 1</option>
-            <option>Licence 2</option>
-            <option>Licence 3</option>
-            <option>Master 1</option>
-            <option>Master 2</option>
-          </select>
-        </div>
-      
-      <div class="mb-3">
-          <label for="dateEvaluation" class="form-label">Effectifs</label>
-          <input type="number" class="form-control" id="ajoutclasse" name="dateEvaluation" >
-       </div>
-     
-    </div>
+      </form>
+      </div>
+
     <div class="modal-footer">
       <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
-      <button type="button" class="btn btn-primary" id="btn1">Enregistrer</button>
+      <button type="button" class="btn btn-primary"  (click)="ajouterClasse()">Enregistrer</button>
     </div>
+
+
   </div>
  
+
+  
