--- a/src/app/Dashbord_admin/apprenant/apprenant.component.html
+++ b/src/app/Dashbord_admin/apprenant/apprenant.component.html
@@ -1,4 +1,4 @@
-
+<app-dashbord-statistique></app-dashbord-statistique>
 <div class="listeapprenent mt-5 mb-5">
   <div class="container">
   <div class="title text-center">
@@ -15,10 +15,10 @@
           <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
               <thead>
                   <tr>
+                    <th appCouleurfond class="text-white fw-bold">Prenom</th>
                       <th appCouleurfond class="text-white fw-bold">Nom</th>
-                      <th appCouleurfond class="text-white fw-bold">Prenom</th>
                       <th appCouleurfond class="text-white fw-bold">Email</th>
-                      <th appCouleurfond class="text-white fw-bold">Classe</th>
+                      <th appCouleurfond class="text-white fw-bold">Niveau</th>
                       <th appCouleurfond class="text-white fw-bold">annnee</th>
                       <th appCouleurfond class="text-white fw-bold">activer</th>
                       <th appCouleurfond class="text-white fw-bold">desactiver</th>
@@ -30,12 +30,12 @@
               <tfoot>
               </tfoot>
               <tbody>
-                  <tr>
-                      <td>Tiger Nixon</td>
-                      <td>System Architect</td>
-                      <td>ggg@gmail.com</td>
-                      <td>L3</td>
-                      <td>2011/04/25</td>
+                  <tr *ngFor="let studie of usersdata " >
+                      <td> {{studie.prenom}} </td>
+                      <td>{{studie.nom}} </td>
+                      <td>{{studie.email}} </td>
+                      <td>{{studie.niveau}}</td>
+                      <td>{{studie.annee}} </td>
                       <td>
                          <div class="d-flex justify-content-evenly">
                         <button class="btn btn-outline-success">
@@ -52,7 +52,7 @@
                        </td>
                       <td>
                         <div class="d-flex justify-content-center">
-                          <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal-detail"><i class="bi bi-person-vcard"style="font-size: 20px;"></i></button>
+                          <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal-detail"   ><i class="bi bi-person-vcard"style="font-size: 20px;"  ></i></button>
                         </div>
 
                       </td>
@@ -78,31 +78,35 @@
       <div class="modal-body">
         <form action="" >
           <div class="col-md-12">
-            <label for="validationCustom01" class="form-label">Nom:</label>
-            <input type="text" name="nom" class="form-control" id="validationCustom01" placeholder="Nom" required  >
+            <label for="prenom" class="form-label">Prenom:</label>
+            <input type="text" name="prenom" class="form-control" id="validationCustom01" placeholder="Prenom" required [(ngModel)]="formuStudent.prenom"  >
           </div>
           <div class="col-md-12">
-            <label for="validationCustom01" class="form-label">Prenom:</label>
-            <input type="text" name="prenom" class="form-control" id="validationCustom01" placeholder="Prenom" required >
+            <label for="nom" class="form-label">Nom:</label>
+            <input type="text" name="nom" class="form-control" id="validationCustom01" placeholder="Nom" required [(ngModel)]="formuStudent.nom" >
           </div>
           <div class="col-md-12">
-            <label for="validationCustom01" class="form-label">Email:</label>
-            <input type="email" name="email" class="form-control" id="validationCustom01" placeholder="email" required >
+            <label for="email" class="form-label">Email:</label>
+            <input type="email" name="email" class="form-control" id="validationCustom01" placeholder="email" required [(ngModel)]="formuStudent.email" >
           </div>
           <div class="col-md-12">
-            <label for="adresse" class="form-label">Adresse:</label>
-            <input type="text" name="adresse"  id ="adresse" class="form-control" id="validationCustom01" placeholder="Prenom" required >
+            <label for="password" class="form-label">Password:</label>
+            <input type="text" name="password" class="form-control" id="password" placeholder="Password" required [(ngModel)]="formuStudent.password" >
           </div>
           <div class="col-md-12">
-            <label for="adresse" class="form-label">Adresse:</label>
-            <select class="form-select form-select-sm mb-3" aria-label="Large select example">
-              <option selected>choisis la Classe</option>
-              <option value="1">L1</option>
-              <option value="2">L2</option>
-              <option value="3">L3</option>
+            <label for="adresse" class="form-label">Annee:</label>
+            <input type="date" name="annee" id="annee" placeholder="annee" [(ngModel)]="formuStudent.annee" >
+          </div>
+          <div class="col-md-12">
+            <label for="adresse" class="form-label">Niveau:</label>
+            <select class="form-select form-select-sm mb-3" name="niveau" aria-label="Large select example" [(ngModel)]="formuStudent.niveau" >
+              <option selected>choisis le niveau</option>
+              <option value="L1">L1</option>
+              <option value="L2">L2</option>
+              <option value="L3">L3</option>
             </select>
           </div>
-          <button class="btn btn-primary">jouter</button>
+          <button class="btn btn-primary" type="submit" (click)="SoumettreFormlaire ()" >jouter</button>
         </form>
       </div>
       <div class="modal-footer">
@@ -122,29 +126,28 @@
       <div class="modal-body">
         <div class="container mt-4 mb-4 p-3 d-flex justify-content-center">
           <div class="card p-4 shadow-md">
-           <div class=" image d-flex flex-column justify-content-center align-items-center">
+           <div class=" image d-flex flex-column justify-content-center align-items-center"   >
 
                 <img src="https://i.imgur.com/wvxPV9S.png" height="100" width="100" />
              <div class="nameuser  w-50 d-flex justify-content-evenly">
-               <span class="name mt-3">Eleanor</span>
-               <span class="name mt-3">Pena</span>
+               <span class="name mt-3"> </span>
+               <span class="name mt-3"></span>
              </div>
              <div class="emaildetail">
-               <span class="name mt-3">email@gmail.com</span>
+               <span class="name mt-3">   </span>
              </div>
              <div class="emaildetail">
-               <span class="name mt-3">Licene1</span>
+               <span class="name mt-3">   </span>
              </div>
              <div class="emaildetail">
-               <span class="name mt-3">2023/2024</span>
+               <span class="name mt-3">   </span>
              </div>
-       <div class="gap-3 mt-3 icons d-flex flex-row justify-content-center align-items-center">
+             <div class="gap-3 mt-3 icons d-flex flex-row justify-content-center align-items-center">
 
-                 </div>
-
-               </div>
-               </div>
-               </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
