--- a/src/app/Dashbord_admin/dashbord-matiere/dashbord-matiere.component.html
+++ b/src/app/Dashbord_admin/dashbord-matiere/dashbord-matiere.component.html
@@ -27,9 +27,9 @@
               <tfoot>
               </tfoot>
               <tbody >
-                  <tr *ngFor="let matiere1 of Matiere " >
+                  <tr *ngFor="let matiere1 of usersMat " >
                       <td> {{matiere1.id}}</td>
-                      <td>{{matiere1.matiiere}}</td>
+                      <td>{{matiere1.matiere}}</td>
                     
                       
                   </tr>
