--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-
-<router-outlet></router-outlet>
+<app-user-professeur></app-user-professeur>
+<!-- <router-outlet></router-outlet> -->
 <!-- <app-apprenant></app-apprenant> -->
 
