--- a/src/app/Dashbord_admin/dashbord-statistique/dashbord-statistique.component.html
+++ b/src/app/Dashbord_admin/dashbord-statistique/dashbord-statistique.component.html
@@ -59,4 +59,32 @@
       </div>
     </div>
   </div>
+  <button type="button" id="btn1" class="btn btn" data-bs-toggle="modal" data-bs-target="#exampleModal"
+    style="margin-top: 80px; margin-left: 90px; margin-bottom: 20px;">
+    Voir plus
+  </button>
+
+
+  <table class="table" style="width: 85%; margin: auto;">
+    <thead>
+      <tr>
+        <th scope="col">id</th>
+        <th scope="col">Nom</th>
+        <th scope="col">Prenom</th>
+        <th scope="col">Email</th>
+        <th scope="col" colspan="2">Action</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr >
+        <th scope="row">#</th>
+        <td>Ndoye</td>
+        <td>Libasse</td>
+        <td>Libasse.gmail.com</td>
+        <td><button class="btn btn" id="btn2" >Archiver</button></td>
+        <td><button class="btn btn" id="btn1">Desactivé</button></td>
+
+      </tr>
+    </tbody>
+  </table>
 </div>
