--- a/src/app/Dashbord_admin/dashbord-statistique/dashbord-statistique.component.css
+++ b/src/app/Dashbord_admin/dashbord-statistique/dashbord-statistique.component.css
@@ -72,3 +72,13 @@
   margin-right: 0.5em;
   border-radius: 10px;
 }
+
+#btn1 {
+  background-color: #457A74;
+  color: white;
+}
+
+#btn2 {
+  background-color: #FFE0D3;
+  color: white;
+}
