--- a/src/app/Dashbord_admin/dashbord-classe/dashbord-classe.component.html
+++ b/src/app/Dashbord_admin/dashbord-classe/dashbord-classe.component.html
@@ -88,7 +88,7 @@
       </div>
 
     <div class="modal-footer">
-      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
+      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" viderChapmsClasse()>Annuler</button>
       <button type="button" class="btn btn-primary"  (click)="ajouterClasse()">Enregistrer</button>
     </div>
 
