--- a/src/app/Dashbord_admin/dashbord-matiere/dashbord-matiere.component.html
+++ b/src/app/Dashbord_admin/dashbord-matiere/dashbord-matiere.component.html
@@ -76,7 +76,7 @@
       </div>
 
     <div class="modal-footer">
-      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
+      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" (click)="viderChapmsMatiere()"> Annuler</button>
       <button type="button" class="btn btn-primary"  (click)="ajouterMatiere()">Enregistrer</button>
     </div>
 
