--- a/src/app/Dashbord_admin/dashbord-statistique/dashbord-statistique.component.html
+++ b/src/app/Dashbord_admin/dashbord-statistique/dashbord-statistique.component.html
@@ -6,8 +6,8 @@
         <div class="cardbx1">
           <i class='bx bxs-graduation'></i>
           <div>
-            <p class="text-center">Apprenant</p>
-            <h3 class="text-center">5</h3>
+            <p class="text-center">Apprenants</p>
+            <h5 class="text-center">5</h5>
           </div>
         </div>
       </div>
@@ -15,27 +15,17 @@
         <div class="cardbx">
           <i class='bx bx-user-pin'></i>
           <div>
-            <p class="text-center">Enseignant</p>
-            <h3 class="text-center">5</h3>
+            <p class="text-center">Enseignants</p>
+            <h5 class="text-center">5</h5>
           </div>
         </div>
       </div>
-      <div class="Card1">
-        <div class="cardbx2">
-          <i class='bx bxs-user-circle'></i>
-          <div>
-            <p class="text-center">Administrateur</p>
-            <h3 class="text-center">2</h3>
-          </div>
-        </div>
-      </div>
-
       <div class="Card1">
         <div class="cardbx1">
           <i class='bx bx-book-bookmark'></i>
           <div>
-            <p class="text-center">Matière</p>
-            <h3 class="text-center">10</h3>
+            <p class="text-center">Matières</p>
+            <h5 class="text-center">10</h5>
           </div>
         </div>
       </div>
@@ -43,17 +33,8 @@
         <div class="cardbx">
           <i class='bx bxs-school'></i>
           <div>
-            <p class="text-center">Classe</p>
-            <h3 class="text-center">4</h3>
-          </div>
-        </div>
-      </div>
-      <div class="Card1">
-        <div class="cardbx2">
-          <i class='bx bx-book-open'></i>
-          <div>
-            <p class="text-center">Evaluation</p>
-            <h3 class="text-center">4</h3>
+            <p class="text-center">Classes</p>
+            <h5 class="text-center">4</h5>
           </div>
         </div>
       </div>
