--- a/src/app/Dashbord_admin/apprenant/apprenant.component.html
+++ b/src/app/Dashbord_admin/apprenant/apprenant.component.html
@@ -191,7 +191,7 @@
               <option value="L3">L3</option>
             </select>
           </div>
-          <button class="btn btn-primary" type="submit"  >modifier</button>
+          <button class="btn btn-primary" type="submit" (click)="modeifierElement ()" >modifier</button>
         </form>
       </div>
       <div class="modal-footer">
