--- a/src/app/Dashbord_admin/dashbord-statistique/dashbord-statistique.component.html
+++ b/src/app/Dashbord_admin/dashbord-statistique/dashbord-statistique.component.html
@@ -7,7 +7,7 @@
           <i class='bx bxs-graduation'></i>
           <div>
             <p class="text-center">Apprenants</p>
-            <h5 class="text-center">5</h5>
+            <h5 class="text-center">{{tailleApprenant}}</h5>
           </div>
         </div>
       </div>
@@ -16,7 +16,7 @@
           <i class='bx bx-user-pin'></i>
           <div>
             <p class="text-center">Enseignants</p>
-            <h5 class="text-center">5</h5>
+            <h5 class="text-center">{{tailleenseignant}}</h5>
           </div>
         </div>
       </div>
@@ -25,7 +25,7 @@
           <i class='bx bx-book-bookmark'></i>
           <div>
             <p class="text-center">Matières</p>
-            <h5 class="text-center">10</h5>
+            <h5 class="text-center">{{tailleMatiere}}</h5>
           </div>
         </div>
       </div>
@@ -34,7 +34,7 @@
           <i class='bx bxs-school'></i>
           <div>
             <p class="text-center">Classes</p>
-            <h5 class="text-center">4</h5>
+            <h5 class="text-center">{{tailleClasse}}</h5>
           </div>
         </div>
       </div>
@@ -53,7 +53,7 @@
         <th scope="col">Nom</th>
         <th scope="col">Prenom</th>
         <th scope="col">Email</th>
-        <th scope="col" colspan="2">Action</th>
+        <th scope="col" rowspan="2">Action</th>
       </tr>
     </thead>
     <tbody>
